# signatures

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
signatures/: main.py
