[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py35', 'py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | signatures.egg-info
)/
'''

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["python"]
